--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -21,5 +21,8 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "import/no-extraneous-dependencies" : "off",
+        "no-console": "off"
+
     }
 }
