--- a/backend/package.json
+++ b/backend/package.json
@@ -4,26 +4,29 @@
   "description": "REST API ",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "npx nodemon server.js"
+    "dev": "npx nodemon src/server.ts"
   },
   "author": "tony_milukov",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
-    "nodemon": "^2.0.22",
     "sequelize": "^6.31.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nodemon": "^2.0.22"
   }
 }
