added product availability, now you can update product count with put request : host/api/order.
on order this product, the count will be changed automaticly

added basket product count,
added order product count

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ DB_NAME=online_store
 DB_PORT=3306
 
 DEFAULT_ORDER_STATUS=1
+ORDER_SENT_STATUS=7
 SECRET_JWT="P#zdxYI4vJjGQ6@@eQD)"
 ADMIN_ROLE=3
 MAX_PRODUCTS_PER_ORDER=15
