--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-PORT=5000
-DB_USER=root
-DB_PASSWORD=root
-DB_HOST=localhost
-DB_NAME=online_store
-DB_PORT=3306
+PORT=YOUR PORT
+DB_USER=YOUR USER
+DB_PASSWORD=YOUR Password
+DB_HOST=YOUR USER
+DB_NAME=YOUR DB NAME
+DB_PORT=YOUR DB PORT
 
-DEFAULT_ORDER_STATUS=9
-ORDER_SENT_STATUS=9
-SECRET_JWT="P#zdxYI4vJjGQ6@@eQD)"
-ADMIN_ROLE=3
-MAX_PRODUCTS_PER_ORDER=15
+DEFAULT_ORDER_STATUS=YOUR DEFAULT ORDER STATUS ID
+ORDER_SENT_STATUS=YOUR ORDER SENT STATUS
+SECRET_JWT=YOUR SECRET JWT
+ADMIN_ROLE=YOUR ADMIN ROLE ID
+MAX_PRODUCTS_PER_ORDER=YOUR MAX PRODUCTS PER ORDER
